--- a/samples/hello-world/build.yaml
+++ b/samples/hello-world/build.yaml
@@ -5,19 +5,7 @@
 
 version: '1'
 
-name: blinky
-binaries:
-  - path: build/blinky.wasm
-
-config:
-  environment:
-    - INTERVAL=500
-  permissions:
-    - console
-    - LED
-version: '1'
-
-name: HelloWorld
+name: hello-world 
 binaries:
   - path: hello-world.wasm
 
